# aerodisk_test_task

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  logger.py  main.py  pyproject.toml  test.py  unit_test.py
alembic/: env.py
alembic/versions/: 676e4eb5ddcf_create_disk_model.py  cb860ee888c1_add_auth_models.py  d60e4487cfaa_create_disk_model.py
app/: __models_init__.py
app/src/: __init__.py
app/src/auth/: __init__.py  crud.py  models.py  routes.py  schemas.py  service.py
app/src/base/: __init__.py  exceptions.py
app/src/base/core/: __init__.py  config.py  logger.py
app/src/base/crud/: __init__.py  base.py
app/src/base/db/: __init__.py  base.py  session.py
app/src/disk_manager/: __init__.py  crud.py  init_db.py  models.py  routes.py  schemas.py  service.py
static/css/: styles.css
templates/: base.html  disk.html  disks.html  error.html  home.html  login.html  profile.html  register.html  set_token.html
